bgcolor fix, table spacing

--- a/labstyle.css
+++ b/labstyle.css
@@ -10,5 +10,10 @@ p {
 }
 
 body {
-	color: black;
+	background-color: black;
+}
+
+#scorebar {
+	width: 100%;
+	padding: 10px;
 }
